# auto-doco

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.deploy.yml
auto_doco/: cli.py  collector.py  github_client.py  settings.py
docs/: index.md  repos.md  subnet.md
docs/repos/: Ideas.md  adventofcode.md  app-designs.md  auto-doco.md  celery-redis.md  cvpilot.md  enrollmentApp.md  forage-ce-infra.md  forage-flask-app.md  forage-pyspark.md  forage-spark-java.md  go-lab.md  hackerRank.md  library.md  mcp-lab.md  msashish.md  multiplication.md  patterns-book.md  patterns.md  react-gitrepoinfo.md  react-router.md  react-webworker.md  react_django_project.md  saml-security.md  simple10.md  springboot-api.md  springlab.md  standalone-app.md  statemachine.md
helpme/: index.html
repos/: index.html
repos/Ideas/: index.html
repos/adventofcode/: index.html
repos/app-designs/: index.html
repos/auto-doco/: index.html
repos/celery-redis/: index.html
repos/cvpilot/: index.html
repos/enrollmentApp/: index.html
repos/forage-ce-infra/: index.html
repos/forage-flask-app/: index.html
repos/forage-pyspark/: index.html
repos/forage-spark-java/: index.html
repos/go-lab/: index.html
repos/hackerRank/: index.html
repos/mcp-lab/: index.html
repos/msashish/: index.html
repos/multiplication/: index.html
repos/patterns/: index.html
repos/patterns-book/: index.html
repos/react-gitrepoinfo/: index.html
repos/react-router/: index.html
search/: search_index.json
subnet/: index.html
(+8 files in other folders)
